Test indexing via pure HTTP request